--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,21 @@ services:
   frontend:
     build: frontend
     ports:
-      - 8501:8501
+      - 80:80
     depends_on:
       - backend
     volumes:
         - ./storage:/storage
+    environment:
+      - STREAMLIT_SERVER_PORT=80
+    network_mode: "host"
   backend:
     build: backend
     ports:
       - 8080:8080
     volumes:
       - ./storage:/storage
+    network_mode: "host"
 
 #   # FastAPI
 #   # api:
