--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,17 @@ services:
     depends_on:
       - backend
     volumes:
-        - ./storage:/storage
+      - share:/app/storage
     environment:
       - STREAMLIT_SERVER_PORT=80
-    network_mode: "host"
   backend:
     build: backend
     image: dipweb.azurecr.io/dipweb-back
-    ports:
-      - 8080:8080
     volumes:
-      - ./storage:/storage
-    network_mode: "host"
+      - share:/app/storage
+
+volumes:
+    share:
 
 #   # FastAPI
 #   # api:
