--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   backend:
     build: backend
     image: dipweb.azurecr.io/dipweb-back
+    ports:
+      - 8080:8080
     volumes:
       - share:/app/storage
 
