--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - backend
     volumes:
-      - share:/app/storage
+      - ./storage:/app/storage
     environment:
       - STREAMLIT_SERVER_PORT=80
   backend:
@@ -18,7 +18,7 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - share:/app/storage
+      - ./storage:/app/storage
 
 volumes:
     share:
